changed item related localization keys to fit 1.14

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -41,9 +41,9 @@
   "tetra.general.honeduplexintegritymultiplier.tooltip": "Integrity multiplier for tool honing. A value of 2 would cause a sword which uses 3 integrity to require a 2*3 times as many uses before it can be honed.",
 
 
-  "item.journal.name": "Holosphere",
-  "item.journal.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
-  "item.journal.tooltip2": "[Right click to use]",
+  "item.tetra.journal": "Holosphere",
+  "item.tetra.journal.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
+  "item.tetra.journal.tooltip2": "[Right click to use]",
   "journal.craft.breadcrumb.root": "Items",
   "journal.craft.sword": "Blades",
   "journal.craft.toolbelt": "Toolbelts",
@@ -199,74 +199,74 @@
   "stats.integrity_usage.tooltip": "Integrity is provided by some modules (often in a specific slot), while it is required by other modules and most improvements.",
 
 
-  "item.modular.broken": "Broken",
-  "item.modular.empty_slot": "Empty",
-  "item.modular.magic_capacity.label": "Magic capacity",
-  "item.modular.magic_capacity.description": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded but the experience cost of applying additional magical improvements will increase greatly and repairing the module will cost experience.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
-  "item.modular.magic_capacity.description_WIP": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded, but the modules magical improvements may destabilize and cause negative effects when the item is altered.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
-  "item.modular.repair_material.label": "Repair material:",
-  "item.modular.repair_material.empty": "Does not need to be repaired",
+  "item.tetra.modular.broken": "Broken",
+  "item.tetra.modular.empty_slot": "Empty",
+  "item.tetra.modular.magic_capacity.label": "Magic capacity",
+  "item.tetra.modular.magic_capacity.description": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded but the experience cost of applying additional magical improvements will increase greatly and repairing the module will cost experience.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
+  "item.tetra.modular.magic_capacity.description_WIP": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded, but the modules magical improvements may destabilize and cause negative effects when the item is altered.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
+  "item.tetra.modular.repair_material.label": "Repair material:",
+  "item.tetra.modular.repair_material.empty": "Does not need to be repaired",
 
-  "tile.block_geode.name": "Geode block",
-  "item.geode.name": "Geode",
-  "item.geode.tooltip": "Breaking open at a workbench may yield valuable minerals",
+  "block.tetra.block_geode": "Geode block",
+  "item.tetra.geode": "Geode",
+  "item.tetra.geode.tooltip": "Breaking open at a workbench may yield valuable minerals",
   "break_geode_action.label": "Break open",
 
-  "item.pristine_diamond.name": "Pristine Diamond",
+  "item.tetra.pristine_diamond": "Pristine Diamond",
   "shatter_diamond_action.label": "Shatter",
 
-  "item.pristine_emerald.name": "Pristine Emerald",
+  "item.tetra.pristine_emerald": "Pristine Emerald",
   "shatter_emerald_action.label": "Shatter",
 
-  "item.pristine_lapis.name": "Pristine Lapis Lazuli",
+  "item.tetra.pristine_lapis": "Pristine Lapis Lazuli",
   "shatter_lapis_action.label": "Shatter",
 
-  "item.magmatic_cell.name": "Thermal cell",
-  "item.magmatic_cell.charge": "Charge: %s",
-  "item.magmatic_cell.charge_full": "§aFull",
-  "item.magmatic_cell.charge_good": "§aGood",
-  "item.magmatic_cell.charge_low": "§eLow",
-  "item.magmatic_cell.charge_empty": "§cEmpty",
+  "item.tetra.magmatic_cell": "Thermal cell",
+  "item.tetra.magmatic_cell.charge": "Charge: %s",
+  "item.tetra.magmatic_cell.charge_full": "§aFull",
+  "item.tetra.magmatic_cell.charge_good": "§aGood",
+  "item.tetra.magmatic_cell.charge_low": "§eLow",
+  "item.tetra.magmatic_cell.charge_empty": "§cEmpty",
 
-  "tile.forged_pillar.name": "Forged pillar",
-  "tile.forged_platform.name": "Forged platform",
-  "tile.forged_platform_slab.name": "Forged platform",
-  "tile.forged_wall.name": "Forged wall",
-  "tile.forged_vent.name": "Forged vent",
-  "tile.forged_crate.name": "Forged crate",
+  "block.tetra.forged_pillar": "Forged pillar",
+  "block.tetra.forged_platform": "Forged platform",
+  "block.tetra.forged_platform_slab": "Forged platform",
+  "block.tetra.forged_wall": "Forged wall",
+  "block.tetra.forged_vent": "Forged vent",
+  "block.tetra.forged_crate": "Forged crate",
 
-  "tile.forged_container.name": "Forged container",
+  "block.tetra.forged_container": "Forged container",
   "forged_container.compartment": "Compartment %s",
 
-  "tile.hammer_base.name": "Hammer base",
-  "tile.hammer_head.name": "Hammer head",
+  "block.tetra.hammer_base": "Hammer base",
+  "block.tetra.hammer_head": "Hammer head",
 
-  "tile.transfer_unit.name": "Transfer unit",
-  "tile.core_extractor.name": "Core extractor",
-  "tile.extractor_piston.name": "Extractor piston",
-  "tile.extractor_pipe.name": "Extractor pipe",
-  "tile.seeping_bedrock.name": "Seeping bedrock",
+  "block.tetra.transfer_unit": "Transfer unit",
+  "block.tetra.core_extractor": "Core extractor",
+  "block.tetra.extractor_piston": "Extractor piston",
+  "block.tetra.extractor_pipe": "Extractor pipe",
+  "block.tetra.seeping_bedrock": "Seeping bedrock",
 
-  "item.forged_bolt.name": "Bolt",
+  "item.tetra.forged_bolt": "Bolt",
   "salvage_bolt_action.label": "Salvage",
 
-  "item.forged_beam.name": "Structure beam",
+  "item.tetra.forged_beam": "Structure beam",
   "salvage_beam_action.label": "Salvage",
 
-  "item.forged_mesh.name": "Flex mesh",
+  "item.tetra.forged_mesh": "Flex mesh",
   "salvage_mesh_action.label": "Salvage",
 
-  "item.quick_latch.name": "Quick latch",
-  "item.quick_latch.description": "Reveals related upgrade schemas while in the inventory.",
+  "item.tetra.quick_latch": "Quick latch",
+  "item.tetra.quick_latch.description": "Reveals related upgrade schemas while in the inventory.",
   "salvage_quick_latch_action_hammer.label": "Salvage",
   "salvage_quick_latch_action_pry.label": "Salvage",
 
-  "item.metal_scrap.name": "Metal scrap",
-  "item.metal_scrap.description": "Shapes of metal, their use undone or never to be known, awaits a purpose anew",
+  "item.tetra.metal_scrap": "Metal scrap",
+  "item.tetra.metal_scrap.description": "Shapes of metal, their use undone or never to be known, awaits a purpose anew",
   "salvage_metal_scrap_action.label": "Salvage",
 
-  "item.vent_plate.name": "Vent plate",
-  "item.vent_plate.description": "Re-attach this to machinery to slightly increase its efficiency.",
+  "item.tetra.vent_plate": "Vent plate",
+  "item.tetra.vent_plate.description": "Re-attach this to machinery to slightly increase its efficiency.",
   "salvage_vent_plate_action.label": "Salvage",
 
   "forged_description": "Found in structures deep underground in snowy biomes",
@@ -283,14 +283,14 @@
   "duplex/binding": "Binding",
   "duplex/accessory": "Accessory",
 
-  "item.modular.settle_progress.label": "Settle progress",
-  "item.modular.settle_progress_gain.description": "As the item is used this module will slowly settle into place, once settled it will provide additional integrity.\n\n§7Progress: §e%s§7/§e%s\n\n§7Requirement base: §e%s\n§7Durability penalty: §e%s",
-  "item.modular.settle_progress_cost.description": "As the item is used this module will slowly settle into place, once settled its integrity cost will decrease.\n\n§7Progress: §e%s§7/§e%s\n\n§7Requirement base: §e%s\n§7Durability penalty: §e%s",
-  "item.modular.settle_full.label": "Fully settled!",
-  "item.modular.settle_full_gain.description": "This module has fully settled, it is providing additional integrity",
-  "item.modular.settle_full_cost.description": "This module has fully settled, its integrity cost is reduced",
-  "item.modular.settle_full_null.label": "Fully settled",
-  "item.modular.settle_full_null.description": "The simplicity of this module makes it easy to fit into place and it does not need to settle any further",
+  "item.tetra.modular.settle_progress.label": "Settle progress",
+  "item.tetra.modular.settle_progress_gain.description": "As the item is used this module will slowly settle into place, once settled it will provide additional integrity.\n\n§7Progress: §e%s§7/§e%s\n\n§7Requirement base: §e%s\n§7Durability penalty: §e%s",
+  "item.tetra.modular.settle_progress_cost.description": "As the item is used this module will slowly settle into place, once settled its integrity cost will decrease.\n\n§7Progress: §e%s§7/§e%s\n\n§7Requirement base: §e%s\n§7Durability penalty: §e%s",
+  "item.tetra.modular.settle_full.label": "Fully settled!",
+  "item.tetra.modular.settle_full_gain.description": "This module has fully settled, it is providing additional integrity",
+  "item.tetra.modular.settle_full_cost.description": "This module has fully settled, its integrity cost is reduced",
+  "item.tetra.modular.settle_full_null.label": "Fully settled",
+  "item.tetra.modular.settle_full_null.description": "The simplicity of this module makes it easy to fit into place and it does not need to settle any further",
 
   "settled.name": "Settled",
   "settled.description": "Due to extended use this module has settled into place, it provides additional integrity",
@@ -302,8 +302,8 @@
   "hone.progress": "Honing progress: %s%%",
   "hone.available": "Honing available",
 
-  "item.modular.synergy_indicator.empty": "This module has no potential synergy bonuses",
-  "item.modular.synergy_indicator.header": "Synergy bonuses:",
+  "item.tetra.modular.synergy_indicator.empty": "This module has no potential synergy bonuses",
+  "item.tetra.modular.synergy_indicator.header": "Synergy bonuses:",
 
   "repair_schema.name": "Repair",
   "repair_schema.description": "Patch up damaged and worn modules. Cycles through the modules of the item, repairing one module at a time.",
