added destabilization effects to magic capacity system
cherry picked d55e7110a926eb910c8b5ba6582da46caa46962e

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -202,8 +202,7 @@
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
   "item.tetra.modular.magic_capacity.label": "Magic capacity",
-  "item.tetra.modular.magic_capacity.description": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded but the experience cost of applying additional magical improvements will increase greatly and repairing the module will cost experience.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
-  "item.tetra.modular.magic_capacity.description_WIP": "The amount of magic that the module may hold and how much of that capacity is in use. The magic capacity may be exceeded, but the modules magical improvements may destabilize and cause negative effects when the item is altered.\n\n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
+  "item.tetra.modular.magic_capacity.description": "The amount of magic this module may hold and how much of that capacity is in use.\\nThe capacity may be exceeded, but working the module will cost experience and magical improvements may destabilize and cause negative effects when the item is altered.\\n\\n§7Magic capacity: §e%s\\n§7Capacity usage: §e%s",
   "item.tetra.modular.repair_material.label": "Repair material:",
   "item.tetra.modular.repair_material.empty": "Does not need to be repaired",
 
@@ -340,6 +339,35 @@
   "enchantment/fortune.description": "Increases drops when breaking things",
   "enchantment/silk_touch.name": "Silk Touch",
   "enchantment/silk_touch.description": "Harvested blocks will not break",
+
+  "destabilized/haunted.name": "§5Destabilized: Haunted",
+  "destabilized/haunted.description": "This module has been haunted and will sometimes turn against the item's wielder! Will disappear over time.",
+
+  "destabilized/fire_aspect.name": "§5Destabilized: Fire Aspect",
+  "destabilized/fire_aspect.description": "Using this may set you on fire, more sever in hot environments",
+  "destabilized/looting.name": "§5Destabilized: Looting",
+  "destabilized/looting.description": "Reduces effectiveness of looting effects",
+  "destabilized/unbreaking.name": "§5Destabilized: Unbreaking",
+  "destabilized/unbreaking.description": "Reduces effectiveness of unbreaking effects",
+  "destabilized/sharpness.name": "§5Destabilized: Sharpness",
+  "destabilized/sharpness.description": "Decreases damage dealt",
+  "destabilized/smite.name": "§5Destabilized: Smite",
+  "destabilized/smite.description": "Reduces effectiveness of smite effects",
+  "destabilized/bane_of_arthropods.name": "§5Destabilized: Bane of Arthropods",
+  "destabilized/bane_of_arthropods.description": "Reduces effectiveness of bane of arthropods",
+  "destabilized/knockback.name": "§5Destabilized: Knockback",
+  "destabilized/knockback.description": "Reduces effectiveness of knockback effects",
+  "destabilized/mending.name": "§5Destabilized: Mending",
+  "destabilized/mending.description": "Reduces effectiveness of mending effects",
+  "destabilized/sweeping.name": "§5Destabilized: Sweeping Edge",
+  "destabilized/sweeping.description": "Reduces sweeping strike range",
+  "destabilized/efficiency.name": "§5Destabilized: Efficiency",
+  "destabilized/efficiency.description": "Reduces efficiency",
+  "destabilized/fortune.name": "§5Destabilized: Fortune",
+  "destabilized/fortune.description": "Reduces effectiveness of fortune effects",
+
+  "cleanse_schema.name": "Cleanse",
+  "cleanse_schema.description": "Cleanse negative effects caused by magic instability.\n\nExperience cost is increased based on exceeded magic capacity and the amount of instability effects.",
 
   "blade_hone_damage_1_schema.name": "Hone: Damage I",
   "blade_hone_damage_1_schema.description": "Hone the module to increase the damage dealt by 0.5.",
