added support for apotheosis enchantments

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -338,6 +338,35 @@
   "destabilized/bluepower_disjunction.name": "§5Destabilized: Disjunction",
   "destabilized/bluepower_disjunction.description": "Reduces the effect of the disjunction enchantment",
 
+  "enchantment/apotheosis_hell_infusion.name": "Hell Infusion",
+  "enchantment/apotheosis_hell_infusion.description": "Deals extra magic damage in the Nether",
+  "destabilized/apotheosis_hell_infusion.name": "Destabilized: Hell Infusion",
+  "destabilized/apotheosis_hell_infusion.description": "Reduces the effect of the Hell Infusion enchantment",
+  "enchantment/apotheosis_mounted_strike.name": "Mounted Strike",
+  "enchantment/apotheosis_mounted_strike.description": "Deals extra damage when on a horse",
+  "destabilized/apotheosis_mounted_strike.name": "Destabilized: Mounted Strike",
+  "destabilized/apotheosis_mounted_strike.description": "Reduces the effect of the Mounted Strike enchantment",
+  "enchantment/apotheosis_depth_miner.name": "Miner's Fervor",
+  "enchantment/apotheosis_depth_miner.description": "Adjusts mining speed based on Y-level",
+  "destabilized/apotheosis_depth_miner.name": "Destabilized: Miner's Fervor",
+  "destabilized/apotheosis_depth_miner.description": "Reduces the effect of the Miner's Fervor enchantment",
+  "enchantment/apotheosis_scavenger.name": "Scavenger",
+  "enchantment/apotheosis_scavenger.description": "Mobs killed may roll their loot tables twice",
+  "destabilized/apotheosis_scavenger.name": "Destabilized: Scavenger",
+  "destabilized/apotheosis_scavenger.description": "Reduces the effect of the Scavenger enchantment",
+  "enchantment/apotheosis_tempting.name": "Temptation",
+  "enchantment/apotheosis_tempting.description": "Entices nearby farm animals",
+  "destabilized/apotheosis_tempting.name": "Destabilized: Temptation",
+  "destabilized/apotheosis_tempting.description": "Reduces the effect of the Temptation enchantment",
+  "enchantment/apotheosis_knowledge.name": "Knowledge of the Ages",
+  "enchantment/apotheosis_knowledge.description": "Enemy drops are directly converted to experience",
+  "destabilized/apotheosis_knowledge.name": "Destabilized: Knowledge of the Ages",
+  "destabilized/apotheosis_knowledge.description": "Reduces the effect of the Knowledge of the Ages enchantment",
+  "enchantment/apotheosis_natures_blessing.name": "Nature's Blessing",
+  "enchantment/apotheosis_natures_blessing.description": "Tool can be used to bonemeal crops",
+  "destabilized/apotheosis_natures_blessing.name": "Destabilized: Nature's Blessing",
+  "destabilized/apotheosis_natures_blessing.description": "Reduces the effect of the Nature's Blessing enchantment",
+
   "cleanse_schema.name": "Cleanse",
   "cleanse_schema.description": "Cleanse negative effects caused by magic instability.\n\nExperience cost is increased based on exceeded magic capacity and the amount of instability effects.",
 
